# physics

./: AGENTS.md  CLAUDE.md  CMakeLists.txt  SECRET_SCAN_REPORT.md
.github/: copilot-instructions.md
docs/: The Simulation-Physics Ladder  A Step-by-Step Build Plan for the Time Dilation Field Framework.md  Time Dilation Fields, Emergent Matter & Excited Materials  A Deep Research Companion.md  agent-instructions.md  chapter-3-vector-simulator-seeds.md  handoff-claude-2026-06-08-local-frame-stage-02.md  handoff-claude-2026-06-08-local-frame-stage-03.md  initial-conversations.md  lesson-01-window-d3d12-imgui-resize.md  lesson-02-pluggable-simulator-interface.md  lesson-03-simulator-module-renderer-pair.md  lesson-04-local-frame-stage-01-xy-plane-in-3d.md  lesson-05-local-frame-stage-02-plane-slices.md  lesson-06-local-frame-stage-03-free-3d-vector.md  lesson-07-local-frame-stage-04-rotated-local-frame.md  lesson-authoring-guide.md  local-engineering-rag-plan.md  local-frame-lab-stage-catalog.md  portfolio-framing.md  selective-physics-curriculum.md  simulation-selection-preferences.md
src/: main.cpp
src/app/: default_simulator_module.cpp  default_simulator_module.h  simulator_module.h
src/gfx/: empty_renderer.cpp  empty_renderer.h  i_simulator_renderer.h  line_renderer_base.cpp  line_renderer_base.h  local_frame_grid_renderer.cpp  local_frame_grid_renderer.h
src/sim/: empty_simulator.cpp  empty_simulator.h  i_simulator.h  local_frame_math.h  local_frame_simulator.cpp  local_frame_simulator.h  local_frame_state.h  simulation_tick.h  simulator_context.h
